src/objects/Project_User_Assignment__c.object
<CustomObject>
    <description>https://help.getharvest.com/api-v2/projects-api/projects/user-assignments/
Link table between custom Project object and standard User object</description>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Budget used when the project’s budget_by is person.</description>
        <label>Budget</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <description>Will be retrieved and saved here by Harvest API code in the future - no need to set. marking as external id so we can search on it</description>
        <externalId>true</externalId>
        <label>Harvest Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Rate used when the project’s bill_by is People.</description>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the user assignment is active or archived.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the user has project manager permissions for the project.</description>
        <label>Is Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project User Assignments</relationshipLabel>
        <relationshipName>Project_User_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An object containing the id and name of the associated user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project User Assignment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Budget</fullName>
        <active>true</active>
        <description>Require Budget to be set if Project’s Budget By = Hours Per Person</description>
        <errorConditionFormula>AND(
ISBLANK(Budget__c),
ISPICKVAL(Project__r.Budget_By__c, &quot;person&quot;)
)
/*
person is API value for Hours Per Person
*/</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>Budget is required if the Project - Budget By field = Hours Per Person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Hourly_Rate</fullName>
        <active>true</active>
        <description>Require Hourly Rate to be set if Project’s Bill By = People</description>
        <errorConditionFormula>AND(
ISBLANK(Hourly_Rate__c),
ISPICKVAL(Project__r.Bill_By__c, &quot;People&quot;)
)</errorConditionFormula>
        <errorDisplayField>Hourly_Rate__c</errorDisplayField>
        <errorMessage>Hourly Rate is required if the Project - Bill By field = People</errorMessage>
    </validationRules>
</CustomObject>